2002-11-22	Piers Haken <piersh@friskit.com>

	* Gnucleus.rc: added key shortcuts to dialogs

Gnucleus 2.0
	swabby: Complete core seperated into library (GnucDNA)
	swabby: Added remote host file browsing support to the interface
	
	
People
	swabby: John Marshall (swabby@c0re.net)
	
	