@@ -1,5 +1,9 @@
 2002-11-22	Piers Haken <piersh@friskit.com>
 
+	* TransfersDown.*: add '%', size, eta columns
+
+2002-11-22	Piers Haken <piersh@friskit.com>
+
 	* Gnucleus.rc: added key shortcuts to dialogs
 
 Gnucleus 2.0
